--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Document</title>
+        <title>My cool project</title>
     </head>
     <body>
-        
+
     </body>
 </html>
