--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>My cool project</title>
     </head>
     <body>
-
+        <h1>
+            My first Repo project, yay 
+        </h1>
     </body>
 </html>
